@@ -46,6 +46,6 @@ if(BUILD_EXAMPLES)
 	add_subdirectory(examples)
 endif(BUILD_EXAMPLES)
 
-# if(BUILD_TESTS)
-# 	add_subdirectory(test)
-# endif(BUILD_TESTS)
+if(BUILD_TESTS)
+	add_subdirectory(test)
+endif(BUILD_TESTS)
